Fixes style issue on mobile.
On mobile, the text does not look pretty when justified. This commit
ensures a special case for narrow views is implemented where the text is
just aligned left.

--- a/css/style-narrower.css
+++ b/css/style-narrower.css
@@ -49,6 +49,10 @@ header.major {
   margin-top: 3em;
 }
 
+.box.special p {
+  text-align: left;
+}
+
 /* Header */
 
 #skel-layers-wrapper {
